make upload-control more and more beautiful add range-reset add jsonutil add packageutil fixed folder "temp" fixed folder "store"

--- a/ROOT/WebContent/WEB-INF/web.xml
+++ b/ROOT/WebContent/WEB-INF/web.xml
@@ -784,6 +784,6 @@ standard deployment descriptor.
   </servlet>
   <servlet-mapping>
     <servlet-name>UploadFileServlet</servlet-name>
-    <url-pattern>/upload</url-pattern>
+    <url-pattern>/upload.do</url-pattern>
   </servlet-mapping>
 </web-app>
