fixed project name

--- a/flyfire.framework.tag/.project
+++ b/flyfire.framework.tag/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>flyfire.framework.tag</name>
+	<name>top.flyfire.tag</name>
 	<comment></comment>
 	<projects>
 	</projects>
