--- a/top.flyfire.sql/.classpath
+++ b/top.flyfire.sql/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/top.flyfire.base"/>
+	<classpathentry kind="lib" path="src/javassist-3.9.0.ga.jar"/>
+	<classpathentry kind="lib" path="entity.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
